# simulated-annealing-university-timetabling-course-problem

./: .gitignore  20180727 Uji Coba Timetable.xlsx  IMPROVEMENT_PLAN.md  PROJECT-STATUS.md  README-PACKAGE.md  README.md  REFACTORING-SUMMARY.md  TESTING-SUMMARY.md  cek_table.js  compare-solutions.cjs  daftar_pustaka_baru.md  display-timetable.ts  index.js  jest.config.js  package-lock.json  package.json  parallel_plan.md  result.md  schedule_verification_analysis.json  timetable-result.json  tsconfig.json  verify_schedule.py
docs/: api-reference.md  (+6 more)
python/: .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml  timetabling_optimization copy.ipynb  timetabling_optimization.ipynb
python/notebooks/: 01-introduction.ipynb
python/src/timetable_sa/: __init__.py
python/src/timetable_sa/core/: __init__.py  simulated_annealing.py
python/src/timetable_sa/core/interfaces/: __init__.py  config.py  constraint.py  move_generator.py
python/src/timetable_sa/core/types/: __init__.py  solution.py  violation.py
python/src/timetable_sa/examples/timetabling/: 03-optimization-visualization.ipynb  04-final-project-demo.ipynb  __init__.py  basic_example.py  full_optimization.py
python/src/timetable_sa/examples/timetabling/constraints/: __init__.py
python/src/timetable_sa/examples/timetabling/data/: __init__.py  excel_loader.py
python/src/timetable_sa/examples/timetabling/domain_types/: __init__.py  domain.py  state.py
python/tests/: conftest.py  test_constraints.py  test_integration.py  test_moves.py  test_simulated_annealing.py  test_soft_constraints.py  test_utils.py
(+176 files in other folders)
