[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timetable-sa"
version = "0.1.0"
description = "Simulated Annealing optimizer for constraint satisfaction problems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Emmanuel Abayor" }
]
keywords = ["simulated-annealing", "optimization", "constraint-satisfaction", "timetabling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/timetable_sa"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
